chap09/chap09_eni-todo/eni-todo-sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eni-todo
  labels:
    app: eni-todo
